# learnopengl

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md
includes/glad/: glad.h
includes/learnopengl/: shader_s.h
src/: glad.c
src/ch1/drawTwoTriangles/: drawTwoTriangles.cpp
src/ch1/hello_triangle/: helloTriangle.cpp
src/ch1/hello_window/: hellowindow.cpp
src/ch1/triangle/: main.cpp
src/ch1/trianglesMakeBox/: trianglesMakeBox.cpp
src/ch2/combined_textures/: combined_textures.cpp
src/ch2/shaders_class/: shaders_class.cpp
src/ch2/textures/: textures.cpp  textures.cpp.bak  textures.cpp.bak2
src/ch2/uniforms/: uniforms.cpp
src/ch3/cube/: cube.cpp
src/ch3/floor/: floor.cpp
src/ch3/transform/: transform.cpp
